--- a/AstroSvitla/Resources/uk.lproj/Localizable.strings
+++ b/AstroSvitla/Resources/uk.lproj/Localizable.strings
@@ -135,3 +135,73 @@
 "area.section.choose" = "Оберіть сферу життя";
 "area.navigation.title" = "Оберіть сферу";
 "area.action.edit_details" = "Змінити дані";
+
+// Chart Details
+"chart_details.title" = "Деталі карти";
+"chart_details.section.birth_info" = "Дані народження";
+"chart_details.label.name" = "Ім'я";
+"chart_details.label.date" = "Дата";
+"chart_details.label.time" = "Час";
+"chart_details.label.place" = "Місце";
+"chart_details.label.coordinates" = "Координати";
+"chart_details.label.timezone" = "Часовий пояс";
+"chart_details.section.angles" = "Кути карти";
+"chart_details.label.ascendant" = "Асцендент (ASC)";
+"chart_details.label.midheaven" = "Середина неба (MC)";
+"chart_details.section.planets" = "Планети";
+"chart_details.house_label" = "дім";
+"chart_details.speed_label" = "Швидкість";
+"chart_details.day_label" = "день";
+"chart_details.section.houses" = "Будинки";
+"chart_details.section.aspects" = "Аспекти";
+"chart_details.orb_label" = "Орб";
+"chart_details.section.metadata" = "Метадані";
+"chart_details.label.calculated_at" = "Дата розрахунку";
+
+// Purchase Confirmation
+"purchase.title" = "Підтвердження покупки";
+"purchase.generate_report" = "Згенерувати звіт";
+"purchase.at_time" = "о";
+"purchase.what_next" = "Що далі";
+"purchase.info.birth_data" = "Ми використаємо ваші дані народження та експертні астрологічні правила, щоб створити персональний звіт.";
+"purchase.info.one_time" = "Це одноразова покупка. Ви зможете повертатися до згенерованого звіту в розділі «Звіти» (незабаром).";
+"purchase.info.preview_build" = "У цьому прев'ю-збірці з вас не стягуватиметься плата.";
+
+// Profile Management
+"profile.manage.title" = "Керувати профілями";
+"profile.delete.title" = "Видалити профіль";
+"profile.delete.action" = "Видалити";
+"profile.empty.title" = "Ще немає профілів";
+"profile.empty.description" = "Створіть профілі на вкладці «Головна», щоб розпочати роботу з персоналізованими натальними картами та звітами";
+"profile.badge.active" = "Активний";
+"profile.report.singular" = "звіт";
+"profile.report.plural" = "звітів";
+
+// Chart Loading
+"chart.loading" = "Завантаження карти...";
+"chart.unavailable" = "Візуалізація карти недоступна";
+"chart.retry" = "Повторити";
+
+// SVG Rendering
+"svg.rendering" = "Рендеринг карти...";
+"svg.failed" = "Не вдалося відобразити карту";
+
+// Onboarding
+"onboarding.skip" = "Пропустити";
+"onboarding.start" = "Почати";
+"onboarding.next" = "Далі";
+
+// Knowledge Source Logs
+"knowledge_logs.button.title" = "Переглянути логи знань";
+"knowledge_logs.title" = "Логи джерел знань";
+"knowledge_logs.status.title" = "Статус";
+"knowledge_logs.status.used" = "Векторна база знань використовувалась";
+"knowledge_logs.status.not_used" = "Векторна база знань не використовувалась";
+"knowledge_logs.sources.title" = "Використані джерела";
+"knowledge_logs.source.section" = "Розділ";
+"knowledge_logs.source.pages" = "Сторінки";
+"knowledge_logs.source.snippet" = "Уривок";
+"knowledge_logs.source.relevance" = "Релевантність";
+"knowledge_logs.empty.title" = "Немає джерел";
+"knowledge_logs.empty.message" = "Для цього звіту не було відстежено жодних конкретних джерел знань.";
+"knowledge_logs.notes.title" = "Примітки";
