Revamp UI with premium glass and animated effects
Major UI overhaul across AreaSelection, MainFlow, Onboarding, Purchase, and UserManagement views. Introduces premium glassmorphism, animated backgrounds, improved iconography, and enhanced layout for a more modern and engaging user experience. Adds reusable design system components and refines button styles, cards, and progress indicators for consistency.

--- a/AstroSvitla/Resources/Localizable.xcstrings
+++ b/AstroSvitla/Resources/Localizable.xcstrings
@@ -4,9 +4,6 @@
     "" : {
 
     },
-    "«%@»" : {
-
-    },
     "(%lld книг)" : {
 
     },
@@ -46,6 +43,16 @@
         }
       }
     },
+    "%@ о %@" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$@ о %2$@"
+          }
+        }
+      }
+    },
     "%@, дім %lld" : {
       "localizations" : {
         "en" : {
@@ -74,9 +81,6 @@
           }
         }
       }
-    },
-    "•" : {
-
     },
     "• %@" : {
 
@@ -194,6 +198,9 @@
           }
         }
       }
+    },
+    "AI-аналіз в процесі..." : {
+
     },
     "alert.generic.message" : {
       "extractionState" : "stale",
@@ -3017,7 +3024,10 @@
     "Аналіз" : {
 
     },
-    "Аналізуємо дані" : {
+    "Аналізуємо позиції планет та аспекти для %@" : {
+
+    },
+    "Аналізуємо сферу «%@» на основі вашої натальної карти" : {
 
     },
     "Аспекти (%lld)" : {
@@ -3035,9 +3045,6 @@
     "Будинки (%lld)" : {
 
     },
-    "Будь ласка, почекайте" : {
-
-    },
     "Вартість" : {
 
     },
@@ -3051,6 +3058,9 @@
 
     },
     "Векторна база знань не містить книг" : {
+
+    },
+    "Виберіть область життя для детального астрологічного звіту" : {
 
     },
     "Виберіть профіль для розрахунку натальної карти або створіть новий" : {
@@ -3074,13 +3084,16 @@
     "Всього токенів" : {
 
     },
+    "Гарантія якості та повернення коштів" : {
+
+    },
     "Генеровано: %@" : {
 
     },
     "Генерування" : {
 
     },
-    "Генерування звіту: %@" : {
+    "Генеруємо звіт" : {
 
     },
     "Головна" : {
@@ -3129,6 +3142,9 @@
 
     },
     "Експортувати PDF" : {
+
+    },
+    "з «%@»" : {
 
     },
     "З нашої БД" : {
@@ -3240,7 +3256,7 @@
     "Оберіть профіль" : {
 
     },
-    "Оберіть сферу" : {
+    "Оберіть сферу аналізу" : {
 
     },
     "Обирайте більш потужні моделі для кращої якості аналізу. GPT-4o Mini рекомендовано для оптимального співвідношення ціни та якості." : {
@@ -3252,7 +3268,7 @@
     "Огляд джерел" : {
 
     },
-    "Одноразовий платіж" : {
+    "одноразово" : {
 
     },
     "Орб: %.2f°" : {
@@ -3261,7 +3277,7 @@
     "Оформлення" : {
 
     },
-    "Переглянути деталі" : {
+    "Переглянути натальну карту" : {
 
     },
     "Персона" : {
@@ -3285,9 +3301,6 @@
     "Помилка рендерингу" : {
 
     },
-    "Попередня версія" : {
-
-    },
     "Початок" : {
 
     },
@@ -3304,9 +3317,6 @@
 
     },
     "Продовжити" : {
-
-    },
-    "Продовжити з профілем" : {
 
     },
     "Пропустити" : {
@@ -3333,6 +3343,9 @@
     "Рендеринг" : {
 
     },
+    "Розраховуємо карту" : {
+
+    },
     "Розрахунок" : {
 
     },
@@ -3346,6 +3359,9 @@
 
     },
     "Скасувати" : {
+
+    },
+    "Створити звіт «%@»" : {
 
     },
     "Створити новий профіль" : {
@@ -3399,7 +3415,7 @@
     "Швидкість: %.4f°/день" : {
 
     },
-    "Що далі?" : {
+    "Що ви отримаєте" : {
 
     }
   },
