Show purchased report areas and prevent duplicates
AreaCard and AreaSelectionView now visually indicate purchased report areas and allow viewing existing reports. MainFlowView prevents duplicate purchases by redirecting to the report if already purchased, and UserProfileService adds helpers for checking and retrieving purchased areas and reports.

--- a/AstroSvitla/Resources/Localizable.xcstrings
+++ b/AstroSvitla/Resources/Localizable.xcstrings
@@ -3060,6 +3060,9 @@
     "Векторна база знань не містить книг" : {
 
     },
+    "Вже придбано" : {
+
+    },
     "Виберіть область життя для детального астрологічного звіту" : {
 
     },
