Refactor profile creation and chart caching logic
Profile creation now saves user data before attempting to fetch natal charts, improving reliability in case of network errors. Added methods to create profiles without charts and attach charts later. Refactored chart and report decoding/encoding to avoid actor isolation issues. Updated UI for Settings and Report List views with glass card and premium background effects. Improved error handling and user feedback throughout profile and chart flows. Updated Info.plist for API transport security exceptions.

--- a/AstroSvitla/Resources/Localizable.xcstrings
+++ b/AstroSvitla/Resources/Localizable.xcstrings
@@ -72,6 +72,9 @@
     "%lld використано" : {
 
     },
+    "%lld токенів" : {
+
+    },
     "%lld°%@'" : {
       "localizations" : {
         "en" : {
@@ -86,9 +89,6 @@
 
     },
     "℞" : {
-
-    },
-    "~$%@/1K токенів" : {
 
     },
     "$%@" : {
@@ -390,6 +390,9 @@
       }
     },
     "ASC" : {
+
+    },
+    "AstroSvitla Team 🇺🇦" : {
 
     },
     "birth.action.clear_saved" : {
@@ -1068,6 +1071,9 @@
           }
         }
       }
+    },
+    "GPT-4o Mini рекомендовано для оптимального співвідношення ціни та якості" : {
+
     },
     "ID: %@" : {
 
@@ -2357,6 +2363,7 @@
       }
     },
     "reports.empty.title" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -3060,6 +3067,9 @@
     "Векторна база знань не містить книг" : {
 
     },
+    "Версія" : {
+
+    },
     "Вже придбано" : {
 
     },
@@ -3177,6 +3187,9 @@
     "Зовнішні книги" : {
 
     },
+    "Зроблено з любов'ю" : {
+
+    },
     "Ім'я" : {
 
     },
@@ -3211,9 +3224,6 @@
     "Логи генерування" : {
 
     },
-    "Макс. токенів" : {
-
-    },
     "Метадані" : {
 
     },
@@ -3227,9 +3237,6 @@
 
     },
     "Модель" : {
-
-    },
-    "Модель OpenAI" : {
 
     },
     "Надано фрагментів" : {
@@ -3247,7 +3254,7 @@
     "Натальна карта" : {
 
     },
-    "Немає збережених звітів" : {
+    "Немає звітів" : {
 
     },
     "Немає профілів" : {
@@ -3260,12 +3267,6 @@
 
     },
     "Оберіть сферу аналізу" : {
-
-    },
-    "Обирайте більш потужні моделі для кращої якості аналізу. GPT-4o Mini рекомендовано для оптимального співвідношення ціни та якості." : {
-
-    },
-    "Обрана модель: **%@**" : {
 
     },
     "Огляд джерел" : {
@@ -3313,7 +3314,7 @@
     "Пошук..." : {
 
     },
-    "Приблизна вартість" : {
+    "Придбайте астрологічний звіт, щоб побачити його тут" : {
 
     },
     "Примітки" : {
@@ -3338,6 +3339,9 @@
 
     },
     "Рекомендації" : {
+
+    },
+    "Рекомендовано" : {
 
     },
     "Релевантність: %@" : {
@@ -3379,7 +3383,7 @@
     "Створіть свій перший профіль" : {
 
     },
-    "Тема" : {
+    "Тема додатку" : {
 
     },
     "Темне" : {
