Add zoomable chart view and improve image handling
Introduces ZoomableChartView for full-screen pinch-to-zoom of natal chart images. NatalChartWheelView now prefers cached PNG images and converts SVG to PNG for better display. Chart view supports tap-to-zoom, and SVGWebViewController is now public for reuse. MainFlowView and report generation UI are visually enhanced, and purchase confirmation features are updated for clarity. Config.swift now loads secrets from environment or Info.plist, with a new example xcconfig for API keys. AIPromptBuilder supports toggling inline source citations in generated prompts.

--- a/AstroSvitla/Resources/Localizable.xcstrings
+++ b/AstroSvitla/Resources/Localizable.xcstrings
@@ -23,6 +23,16 @@
     "%@" : {
 
     },
+    "%@ %@" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$@ %2$@"
+          }
+        }
+      }
+    },
     "%@ • %@" : {
       "localizations" : {
         "en" : {
@@ -72,7 +82,20 @@
     "%lld використано" : {
 
     },
+    "%lld планет • %lld аспектів" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$lld планет • %2$lld аспектів"
+          }
+        }
+      }
+    },
     "%lld токенів" : {
+
+    },
+    "%lld%%" : {
 
     },
     "%lld°%@'" : {
@@ -198,9 +221,6 @@
           }
         }
       }
-    },
-    "AI-аналіз в процесі..." : {
-
     },
     "alert.generic.message" : {
       "extractionState" : "stale",
@@ -390,6 +410,9 @@
       }
     },
     "ASC" : {
+
+    },
+    "AstroSvitla" : {
 
     },
     "AstroSvitla Team 🇺🇦" : {
@@ -986,6 +1009,15 @@
           }
         }
       }
+    },
+    "DEV" : {
+
+    },
+    "Dev Mode вимкнено" : {
+
+    },
+    "Dev Mode увімкнено" : {
+
     },
     "error.chart.calculation_failed" : {
       "extractionState" : "stale",
@@ -3031,10 +3063,10 @@
     "Аналіз" : {
 
     },
-    "Аналізуємо позиції планет та аспекти для %@" : {
+    "Аналізуємо вашу карту" : {
 
     },
-    "Аналізуємо сферу «%@» на основі вашої натальної карти" : {
+    "Аналізуємо позиції планет та аспекти для %@" : {
 
     },
     "Аспекти (%lld)" : {
@@ -3091,22 +3123,13 @@
     "Видалити профіль" : {
 
     },
-    "Використані джерела" : {
-
-    },
     "Всього токенів" : {
 
     },
     "Гарантія якості та повернення коштів" : {
 
     },
-    "Генеровано: %@" : {
-
-    },
-    "Генерування" : {
-
-    },
-    "Генеруємо звіт" : {
+    "Генерування PDF..." : {
 
     },
     "Головна" : {
@@ -3136,9 +3159,6 @@
     "Деталі карти" : {
 
     },
-    "Джерела использованы" : {
-
-    },
     "Джерела не були процитовані" : {
 
     },
@@ -3149,6 +3169,9 @@
 
     },
     "Додайте дані народження для нової людини" : {
+
+    },
+    "Досліджуємо сферу «%@» на основі класичної та сучасної астрологічної літератури" : {
 
     },
     "Доступна векторна база даних" : {
@@ -3164,6 +3187,9 @@
 
     },
     "Завантаження карти" : {
+
+    },
+    "Зазвичай займає 30-60 секунд" : {
 
     },
     "Закрити" : {
@@ -3182,6 +3208,9 @@
 
     },
     "Звіти без профілю" : {
+
+    },
+    "Згенеровано за допомогою AstroSvitla" : {
 
     },
     "Зовнішні книги" : {
@@ -3252,6 +3281,9 @@
 
     },
     "Натальна карта" : {
+
+    },
+    "Натисніть для збільшення" : {
 
     },
     "Немає звітів" : {
